# robotics-final-ws

./: .gitignore  .gitmodules  README.md  pixi-toolchain.cmake  pixi.toml
src/explorer/: package.xml  setup.py
src/explorer/explorer/: explorer_node.py  explorer_node2.py
src/explorer/launch/: explorer.launch
src/explorer/resource/: explorer
src/project_r/: package.xml  setup.cfg  setup.py
src/project_r/launch/: ep_tof.launch.py  main.launch.py
src/project_r/project_r/: controller.py  main_controller.py
src/robomaster_example/: setup.py
src/robomaster_example/launch/: controller.launch
src/robomaster_example/robomaster_example/: controller_node.py
src/robomaster_tof/: README.md  package.xml  setup.cfg  setup.py
src/robomaster_tof/launch/: align.launch.py  explore.launch.py
src/robomaster_tof/robomaster_tof/: align_controller.py  explore_controller.py
