<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>project_r</name>
  <version>1.0.0</version>
  <description>ROS2 robot controller implementing autonomous navigation with obstacle avoidance and fire detection using computer vision</description>
  <maintainer email="riccardo.sacco@usi.ch">riccardosacco</maintainer>
  <maintainer email="r.kalvitis@usi.ch">rkalvitis</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
